--- a/index.html
+++ b/index.html
@@ -1,17 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="hu">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Börtönszökős játék</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Börtönszökős játék - főoldal</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<link rel="stylesheet" href="ccs.css">
 </head>
 
 <body>
-    <header>
-        <p>A nagy szökés a börtönből</p>
 
-    </header>    
+
+
+  <nav class="navbar navbar-expand-lg bg-clear">
+    <div class="container-fluid border-bottom border-black " id="navbar">
+        <a class="navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <contanier class="text-end container-fluid">
+            <div class="collapse navbar-collapse csodasclass" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="nav-item t">
+                        <a class="nav-link fw-bold" aria-current="page" href="info.html">Információk</a>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="nav-item t">
+                        <a class="nav-link  fw-bold" aria-current="page" href="keszit.html">Készítők</a>
+                    </li>
+
+                    </li>
+                </ul>
+
+            </div>
+        </contanier>
+    </div>
+</nav>
+
+  <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >A hegyek apró kavicsokból épülnek
+    fel. Az óceán parányi vízcseppekből áll össze. Hasonlóképpen az élet is kis mozzanatok, tettek, szavak és gondolatok
+    összessége, melyek közül mindegyik - legyen akár jó, akár rossz - rendkívüli hatással bírhat.</div>
+
+
+  
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <script src="java2.js"></script>
 </body>
+
 </html>
