--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
     </div>
 </nav>
 
-  <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >A hegyek apró kavicsokból épülnek
-    fel. Az óceán parányi vízcseppekből áll össze. Hasonlóképpen az élet is kis mozzanatok, tettek, szavak és gondolatok
-    összessége, melyek közül mindegyik - legyen akár jó, akár rossz - rendkívüli hatással bírhat.</div>
+  <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >A játék xy-ról szól, aki eltervezte, hogy megszökik a börtönből. Folyamatos választási lehetőségek, és adott esetben kihívások is lesznek a játék során. A játékban láthatjuk a szökevényünk egészségi szintjét, a pénzt, a szökéstől eltelt időt, lebukási esély %-ban és az Energia szintünket is láthatjuk. Sok esetben a játékosnak kell megadnia a kért információkat. A játék úgy kezdődik, hogy három fajta szökési módból kell választanunk, amelyek az ásás, a kerítésen át kivágni magunkat, és egy hamis kulccsal kinyitni az ajtókat, és így kijutni. Sok esetben le tud bukni a játékos, és így véget ér a játék, ezért ügyelnünk kell, hogy mit választunk.</div>
 
 
   
