--- a/info.html
+++ b/info.html
@@ -13,8 +13,8 @@
 <body>
 
     <nav class="navbar navbar-expand-lg bg-clear">
-        <div class="container-fluid border-bottom border-black " id="navbar">
-            <a class="navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
+        <div class="container-fluid border-bottom border-white " id="navbar">
+            <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -29,13 +29,13 @@
 
 
                         <li class="nav-item t">
-                            <a class="nav-link fw-bold" aria-current="page" href="info.html">Információk</a>
+                            <a class="link nav-link fw-bold" aria-current="page" href="info.html">Információk</a>
                         </li>
                         <li>
-                            <hr class="dropdown-divider">
+                            <hr class="link dropdown-divider">
                         </li>
                         <li class="nav-item t">
-                            <a class="nav-link  fw-bold" aria-current="page" href="keszit.html">Készítők</a>
+                            <a class="link nav-link  fw-bold" aria-current="page" href="keszit.html">Készítők</a>
                         </li>
 
                         </li>
