--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 
   <nav class="navbar navbar-expand-lg bg-clear">
-    <div class="container-fluid border-bottom border-black " id="navbar">
-        <a class="navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
+    <div class="container-fluid border-bottom border-white" id="navbar">
+        <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -29,13 +29,13 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li class="nav-item t">
-                        <a class="nav-link fw-bold" aria-current="page" href="info.html">Információk</a>
+                        <a class="link nav-link fw-bold" aria-current="page" href="info.html">Információk</a>
                     </li>
                     <li>
-                        <hr class="dropdown-divider">
+                        <hr class="link dropdown-divider">
                     </li>
                     <li class="nav-item t">
-                        <a class="nav-link  fw-bold" aria-current="page" href="keszit.html">Készítők</a>
+                        <a class="link nav-link  fw-bold" aria-current="page" href="keszit.html">Készítők</a>
                     </li>
 
                     </li>
@@ -45,7 +45,7 @@
         </contanier>
     </div>
 </nav>
-
+<h1 class="mb-3 mt-3 color-light px-5 ">A játék története</h1>
   <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >A játék xy-ról szól, aki eltervezte, hogy megszökik a börtönből. Folyamatos választási lehetőségek, és adott esetben kihívások is lesznek a játék során. A játékban láthatjuk a szökevényünk egészségi szintjét, a pénzt, a szökéstől eltelt időt, lebukási esély %-ban és az Energia szintünket is láthatjuk. Sok esetben a játékosnak kell megadnia a kért információkat. A játék úgy kezdődik, hogy három fajta szökési módból kell választanunk, amelyek az ásás, a kerítésen át kivágni magunkat, és egy hamis kulccsal kinyitni az ajtókat, és így kijutni. Sok esetben le tud bukni a játékos, és így véget ér a játék, ezért ügyelnünk kell, hogy mit választunk.</div>
 
 
