--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     </div>
 </nav>
 <h1 class="mb-3 mt-3 color-light px-5 ">A játék története</h1>
-  <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >A játék xy-ról szól, aki eltervezte, hogy megszökik a börtönből. Folyamatos választási lehetőségek, és adott esetben kihívások is lesznek a játék során. A játékban láthatjuk a szökevényünk egészségi szintjét, a pénzt, a szökéstől eltelt időt, lebukási esély %-ban és az Energia szintünket is láthatjuk. Sok esetben a játékosnak kell megadnia a kért információkat. A játék úgy kezdődik, hogy három fajta szökési módból kell választanunk, amelyek az ásás, a kerítésen át kivágni magunkat, és egy hamis kulccsal kinyitni az ajtókat, és így kijutni. Sok esetben le tud bukni a játékos, és így véget ér a játék, ezért ügyelnünk kell, hogy mit választunk.</div>
+  <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >
+    <p>A játék xy-ról szól, aki eltervezte, hogy megszökik a börtönből. Folyamatos választási lehetőségek, és adott esetben kihívások is lesznek a játék során. A játékban láthatjuk a szökevényünk egészségi szintjét, a pénzt, a szökéstől eltelt időt, lebukási esély %-ban és az Energia szintünket is láthatjuk. Sok esetben a játékosnak kell megadnia a kért információkat. A játék úgy kezdődik, hogy három fajta szökési módból kell választanunk, amelyek az ásás, a kerítésen át kivágni magunkat, és egy hamis kulccsal kinyitni az ajtókat, és így kijutni. Sok esetben le tud bukni a játékos, és így véget ér a játék, ezért ügyelnünk kell, hogy mit választunk.</p>
+
+    </div>
 
 
   
