--- a/info.html
+++ b/info.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Börtönszökős játék - információk</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-<link rel="stylesheet" href="ccs.css">
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="ccs.css">
 </head>
 
 <body>
@@ -46,15 +46,15 @@
         </div>
     </nav>
 
-    <div class="container-fluid mb-2">
-        <h1 id="cim" class="mb-3 mt-3 cimfo2">Különböző itemek a játékban</h1>
-        <li>Kulcs</li>
-        <li>Ásó</li>
-        <li>Csípőfogó</li>
-        <h1 id="cim" class="mb-3 mt-3 cimfo2">Különböző változók a játékban</h1>
-        <li>Energia</li>
-        <li>Lebukási esély</li>
-        <li>Pénz</li>
+    <div class="betumeret container-fluid mb-2 mx-5">
+        <h1 id="cim" class="cimfo2 mb-3 mt-3  ">Különböző itemek a játékban</h1>
+        <li class="mx-5">Kulcs</li>
+        <li class="mx-5">Ásó</li>
+        <li class="mx-5">Csípőfogó</li>
+        <h1 id="cim" class="cimfo2 mb-3 mt-3 ">Különböző változók a játékban</h1>
+        <li class="mx-5">Energia</li>
+        <li class="mx-5">Lebukási esély</li>
+        <li class="mx-5">Pénz</li>
         
     </div>
 
