--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <nav class="navbar navbar-expand-lg bg-clear">
     <div class="container-fluid border-bottom border-white" id="navbar">
         <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        <button class="menu navbar-toggler " type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class=" navbar-toggler-icon"></span>
         </button>
         <contanier class="text-end container-fluid">
             <div class="collapse navbar-collapse csodasclass" id="navbarSupportedContent">
@@ -51,10 +51,7 @@
 
     </div>
 
-
-  
-
-
+      <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
 
 
 
