--- a/info.html
+++ b/info.html
@@ -46,7 +46,7 @@
         </div>
     </nav>
 
-    <div class="betumeret container-fluid mb-2 mx-5">
+    <div class="betumeret container mb-2 mx-5">
         <h1 id="cim" class="cimfo2 mb-3 mt-3  ">Különböző itemek a játékban</h1>
         <li class="mx-5">Kulcs</li>
         <li class="mx-5">Ásó</li>
