--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Börtönszökős játék - főoldal</title>
+  <title>The Great Escape</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="ccs.css">
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-expand-lg bg-clear">
     <div class="container-fluid border-bottom border-white" id="navbar">
-        <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
+        <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">The Great Escape</a>
         <button class="menu navbar-toggler " type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -45,12 +45,28 @@
         </contanier>
     </div>
 </nav>
-<h1 class="mb-3 mt-3 color-light px-5 ">A játék története</h1>
-  <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >
-    <p>A játék xy-ról szól, aki eltervezte, hogy megszökik a börtönből. Folyamatos választási lehetőségek, és adott esetben kihívások is lesznek a játék során. A játékban láthatjuk a szökevényünk egészségi szintjét, a pénzt, a szökéstől eltelt időt, lebukási esély %-ban és az Energia szintünket is láthatjuk. Sok esetben a játékosnak kell megadnia a kért információkat. A játék úgy kezdődik, hogy három fajta szökési módból kell választanunk, amelyek az ásás, a kerítésen át kivágni magunkat, és egy hamis kulccsal kinyitni az ajtókat, és így kijutni. Sok esetben le tud bukni a játékos, és így véget ér a játék, ezért ügyelnünk kell, hogy mit választunk.</p>
-
+  
+<div id="carouselExample" class="kepek carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/kep2.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/szoba2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/kulcs2.jpg" class="d-block w-100" alt="...">
+      </div>
     </div>
-
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
       <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
 
 
