--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Börtönszökős játék - információk</title>
+    <title>The Great Escape</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="ccs.css">
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg bg-clear">
         <div class="container-fluid border-bottom border-white " id="navbar">
-            <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">Börtönszökős játék</a>
+            <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">The Great Escape</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -47,16 +47,20 @@
     </nav>
 
     <div class="betumeret container mb-2 mx-5">
-        <h1 id="cim" class="cimfo2 mb-3 mt-3  ">Különböző itemek a játékban</h1>
+        <h1 id="cim" class="cimfo2 mb-3 mt-3  ">Itemek a játékban</h1>
         <li class="mx-5">Kulcs</li>
         <li class="mx-5">Ásó</li>
         <li class="mx-5">Csípőfogó</li>
-        <h1 id="cim" class="cimfo2 mb-3 mt-3 ">Különböző változók a játékban</h1>
+        <h1 id="cim" class="cimfo2 mb-3 mt-3 ">Változók a játékban</h1>
         <li class="mx-5">Energia</li>
         <li class="mx-5">Lebukási esély</li>
         <li class="mx-5">Pénz</li>
         
     </div>
+    <div class="fst-italic fw-bold  d-flex align-items-center  mx-md-5 fs-3 p-3 p-md-5" >
+        <p>A játék xy-ról szól, aki eltervezte, hogy megszökik a börtönből. Folyamatos választási lehetőségek, és adott esetben kihívások is lesznek a játék során. A játékban láthatjuk a szökevényünk egészségi szintjét, a pénzt, a szökéstől eltelt időt, lebukási esély %-ban és az Energia szintünket is láthatjuk. Sok esetben a játékosnak kell megadnia a kért információkat. A játék úgy kezdődik, hogy három fajta szökési módból kell választanunk, amelyek az ásás, a kerítésen át kivágni magunkat, és egy hamis kulccsal kinyitni az ajtókat, és így kijutni. Sok esetben le tud bukni a játékos, és így véget ér a játék, ezért ügyelnünk kell, hogy mit választunk.</p>
+    
+        </div>
 
 
 
