--- a/keszit.html
+++ b/keszit.html
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="ccs.css">
-    <title>Börtönszökős játék - készítők</title>
+    <title>The Great Escape</title>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg bg-clear">
     <div class="container-fluid border-bottom border-white " id="navbar">
-        <a class="link navbar-brand fw-bold fs-3" href="index.html">Börtönszökős játék</a>
+        <a class="link navbar-brand fw-bold fs-3" href="index.html">The Great Escape</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
