--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg bg-clear">
         <div class="container-fluid border-bottom border-white " id="navbar">
-            <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">The Great Escape</a>
+            <a class="navbarcim navbar-brand fw-bold fs-3 cimfo" href="index.html">The Great Escape</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
