--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-expand-lg bg-clear">
     <div class="container-fluid border-bottom border-white" id="navbar">
-        <a class="link navbar-brand fw-bold fs-3 cimfo" href="index.html">The Great Escape</a>
+        <a class="navbarcim navbar-brand fw-bold fs-3 cimfo" href="index.html">The Great Escape</a>
         <button class="menu navbar-toggler " type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -45,6 +45,7 @@
         </contanier>
     </div>
 </nav>
+<a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
   
 <div id="carouselExample" class="kepek carousel slide">
     <div class="carousel-inner">
@@ -67,7 +68,6 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-      <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
 
 
 
