--- a/keszit.html
+++ b/keszit.html
@@ -1,106 +1,136 @@
 <!doctype html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="ccs.css">
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="ccs.css">
     <title>The Great Escape</title>
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-lg bg-clear">
-    <div class="container-fluid border-bottom border-white " id="navbar">
-        <a class="link navbar-brand fw-bold fs-3" href="index.html">The Great Escape</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <contanier class="text-end container-fluid">
-            <div  class="collapse navbar-collapse csodasclass" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+    <nav class="navbar navbar-expand-lg bg-clear">
+        <div class="container-fluid border-bottom border-white " id="navbar">
+            <a class="navbarcim navbar-brand fw-bold fs-3" href="index.html">The Great Escape</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <contanier class="text-end container-fluid">
+                <div class="collapse navbar-collapse csodasclass" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
 
 
 
 
-                    <li class="nav-item t">
-                        <a class="link nav-link fw-bold" aria-current="page" href="info.html">Információk</a>
-                    </li>
-                    <li>
-                        <hr class="link dropdown-divider">
-                    </li>
-                    <li class="nav-item t">
-                        <a class="link nav-link  fw-bold" aria-current="page" href="keszit.html">Készítők</a>
-                    </li>
+                        <li class="nav-item t">
+                            <a class="link nav-link fw-bold" aria-current="page" href="info.html">Információk</a>
+                        </li>
+                        <li>
+                            <hr class="link dropdown-divider">
+                        </li>
+                        <li class="nav-item t">
+                            <a class="link nav-link  fw-bold" aria-current="page" href="keszit.html">Készítők</a>
+                        </li>
 
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
 
-            </div>
-        </contanier>
-    </div>
-</nav>
+                </div>
+            </contanier>
+        </div>
+    </nav>
 
     <div class="container">
 
         <h1 class="text-center mb-md-5 mt-md-3">A "játék" készítői</h1>
+        <div class="row d-flex justify-content-center align-items-center mt-5"></div>
+        <div class="card mb-3 kepcard">
+            <div class="row g-0 h-100">
+                <div class="col-md-4 h-100">
+                    <img src="images/20231113_131255.jpg" class="kep img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Horváth Dániel</h5>
+                        <p class="card-text">Profi ccs mester, a dani-reszponzív oldal fejlesztője.
+                        <ul>
+                            <li>vagas.py</li>
+                            <li>main.py</li>
+                            <li>readme.md</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3 kepcard">
+            <div class="row g-0 h-100">
+                <div class="col-md-4 h-100">
+                    <img src="images/IMG_9960.jpg" class="kep img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Horváth Márk</h5>
+                        <p class="card-text">HMaark12
+                        <ul>
+                            <li>kulcs.py</li>
+                            <li>main.py</li>
+                            <li>index.html</li>
+                            <li>info.html</li>
+                            <li>keszit.html</li>
+                            <li>ccs.css</li>
+                        </ul>
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3 kepcard">
+            <div class="row g-0 h-100">
+                <div class="col-md-4 h-100">
+                    <img src="images/received_1170162523665616.jpeg" class="kep img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Farkas Ádám</h5>
+                        <p class="card-text">
+                        <ul>
+                            <li>asas.py</li>
+                            <li>index.html</li>
+                            <li>info.html</li>
+                            <li>keszit.html</li>
+                            <li>menu.py</li>
+                        </ul>
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="row d-flex justify-content-center align-items-center mt-5">
 
-            <div class="card col-s-3 m-md-3 align-middle mt-5" style="width: 18rem; height: 35rem">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Horváth Dániel</h5>
-                    <p class="card-text">Profi ccs mester, a dani-reszponzív oldal fejlesztője.</p>
-                    <ul>
-                        <li>vagas.py</li>
-                        <li>main.py</li>
-                        <li>readme.md</li>
-                    </ul>
-                </div>
-            </div>
 
-            <div class="card col-s-3 m-md-3 align-middle mt-5" style="width: 18rem; height: 35rem">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Hortváth Márk</h5>
-                    <p class="card-text">HMaark12</p>
-                    <ul>
-                        <li>kulcs.py</li>
-                        <li>main.py</li>
-                        <li>index.html</li>
-                        <li>info.html</li>
-                        <li>keszit.html</li>
-                        <li>ccs.css</li>
-                    </ul>
-                </div>
-            </div>
 
-            <div class="card col-s-3 m-md-3 align-middle mt-5" style="width: 18rem; height: 35rem  ">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold fw-bold">Farkas Ádám</h5>
-                    <p class="card-text"></p>
-                    <ul>
-                        <li>asas.py</li>
-                        <li>index.html</li>
-                        <li>info.html</li>
-                        <li>keszit.html</li>
-                        <li>menu.py</li>
-                    </ul>
-                    </div>
-            </div>
-          
 
-            
+
 
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-            crossorigin="anonymous"></script>
-<script src="js/bootstrap.js"></script>
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
+
 </html>
