--- a/index.html
+++ b/index.html
@@ -47,27 +47,7 @@
 </nav>
 <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
   
-<div id="carouselExample" class="kepek carousel slide">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/kep2.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/szoba2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/kulcs2.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+<img src="images/kep2.png" class="kep1 img-fluid" alt="">
 
 
 
