--- a/index.html
+++ b/index.html
@@ -46,9 +46,26 @@
     </div>
 </nav>
 <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
-  
-<img src="images/kep2.png" class="kep1 img-fluid" alt="">
-
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 justify-content-center mb-3">
+            <img src="images/kep2.png" alt="">
+        </div>
+        <div class="col-lg-4 justify-content-center fadeInUp-animation">
+            <div class="card bg-card cardframe" style="width: 100%;">
+                <img src="images/szoba2.jpg" class="card-img-top" alt="...">
+                <div class="card-body text-">
+                    <p class="card-text ">Fedezd fel Kolppo cityt, s tudd meg a valós kilétedet, miközben sok kalndaban veszel részt...</p>
+                    <p class="card-text ertek text-uppercase mb-0"><small>Legutóbbi értékelések: <span class="text-capitalize"><a href="">Nagyon pozitív</a></span> (1,161) </small></p>
+                    <p class="card-text ertek text-uppercase "><small>Minden értékelés: <span class="text-capitalize"><a href="">Nagyon pozitív</a></span> (7,312) </small></p>
+                    <p class="card-text ertek  "><small class="text-uppercase">Megjelenési dátuma: </small> 2023. nov. 8</p>
+                    <p class="card-text ertek  "><small class="text-uppercase">Fejlesztő: </small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">MJP Studio</a></p>
+                    <p class="card-text ertek  "><small class="text-uppercase">Kiadó: </small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">MJP Studio</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
