--- a/index.html
+++ b/index.html
@@ -45,22 +45,29 @@
         </contanier>
     </div>
 </nav>
-<a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-lg-8 justify-content-center mb-3">
-            <img src="images/kep2.png" alt="">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/kep2.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                
+              </div>
         </div>
-        <div class="col-lg-4 justify-content-center fadeInUp-animation">
-            <div class="card bg-card cardframe" style="width: 100%;">
+        <div class="col-lg-4 lg-m-5 justify-content-center fadeInUp-animation">
+            <div class="kártya bg-card cardframe" style="width: 100%;">
                 <img src="images/szoba2.jpg" class="card-img-top" alt="...">
-                <div class="card-body text-">
-                    <p class="card-text ">Fedezd fel Kolppo cityt, s tudd meg a valós kilétedet, miközben sok kalndaban veszel részt...</p>
-                    <p class="card-text ertek text-uppercase mb-0"><small>Legutóbbi értékelések: <span class="text-capitalize"><a href="">Nagyon pozitív</a></span> (1,161) </small></p>
-                    <p class="card-text ertek text-uppercase "><small>Minden értékelés: <span class="text-capitalize"><a href="">Nagyon pozitív</a></span> (7,312) </small></p>
-                    <p class="card-text ertek  "><small class="text-uppercase">Megjelenési dátuma: </small> 2023. nov. 8</p>
-                    <p class="card-text ertek  "><small class="text-uppercase">Fejlesztő: </small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">MJP Studio</a></p>
-                    <p class="card-text ertek  "><small class="text-uppercase">Kiadó: </small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">MJP Studio</a></p>
+                <div class="card-body ">
+                    <p class="card-text ">Szerezd meg a szabaduláshoz szükséges itemeket és szabadulj ki a börtönből!</p>
+                    <p class="card-text sorok text-uppercase mb-0"><small>Legutóbbi értékelések: <span class="text-capitalize"><a href="">Pozitív</a></span> (137) </small></p>
+                    <p class="card-text sorok text-uppercase "><small>Minden értékelés: <span class="text-capitalize"><a href="">Nagyon pozitív</a></span> (4,351) </small></p>
+                    <p class="card-text sorok  "><small class="text-uppercase">Megjelenési dátuma: </small> 2023. nov. 14</p>
+                    <p class="card-text sorok  "><small class="text-uppercase">Fejlesztők: </small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
+                    <p class="card-text sorok  "><small class="text-uppercase">Kiadók: </small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
+                    <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
                 </div>
             </div>
         </div>
