--- a/keszit.html
+++ b/keszit.html
@@ -50,7 +50,7 @@
 
     <div class="container">
 
-        <h1 class="text-center mb-md-5 mt-md-3">A "játék" készítői</h1>
+        <h1 id="cim" class="text-center mb-md-5 mt-md-3">A "játék" készítői</h1>
         <div class="row d-flex justify-content-center align-items-center mt-5"></div>
         <div class="card mb-3 kepcard">
             <div class="row g-0 h-100">
