--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <p class="card-text ">Szerezd meg a szabaduláshoz szükséges itemeket és szabadulj ki a börtönből!</p>
                     <p class="card-text sorok text-uppercase mb-0"><small>Legutóbbi értékelések: <span class="text-capitalize"><a href="">Pozitív</a></span> (137) </small></p>
                     <p class="card-text sorok text-uppercase "><small>Minden értékelés: <span class="text-capitalize"><a href="">Nagyon pozitív</a></span> (4,351) </small></p>
-                    <p class="card-text sorok  "><small class="text-uppercase">Megjelenési dátuma: </small> 2023. nov. 14</p>
-                    <p class="card-text sorok  "><small class="text-uppercase">Fejlesztők: </small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
-                    <p class="card-text sorok  "><small class="text-uppercase">Kiadók: </small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
+                    <p class="card-text sorok  "><small class="text-uppercase">Megjelenési dátuma: </small><span style="color: #8f98a0;">2023. nov. 14</span></p>
+                    <p class="card-text sorok  "><small class="text-uppercase">Fejlesztő: </small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
+                    <p class="card-text sorok  "><small class="text-uppercase">Kiadó: </small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
                     <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
                 </div>
             </div>
