--- a/index.html
+++ b/index.html
@@ -51,22 +51,39 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/kep2.png" class="d-block w-100" alt="...">
+                    <img src="images/kep2.png" class="kep2 d-block w-100" alt="...">
                   </div>
                 </div>
                 
               </div>
         </div>
-        <div class="col-lg-4 lg-m-5 justify-content-center fadeInUp-animation">
-            <div class="kártya bg-card cardframe" style="width: 100%;">
+        <div class="col-lg-4 lg-m-5 justify-content-center">
+            <div class="kártya cardframe" style="width: 110%;">
                 <img src="images/szoba2.jpg" class="card-img-top" alt="...">
                 <div class="card-body ">
-                    <p class="card-text ">Szerezd meg a szabaduláshoz szükséges itemeket és szabadulj ki a börtönből!</p>
-                    <p class="card-text sorok text-uppercase mb-0"><small>Legutóbbi értékelések: <span class="text-capitalize"><a href="">Pozitív</a></span> (137) </small></p>
-                    <p class="card-text sorok text-uppercase "><small>Minden értékelés: <span class="text-capitalize"><a href="">Nagyon pozitív</a></span> (4,351) </small></p>
-                    <p class="card-text sorok  "><small class="text-uppercase">Megjelenési dátuma: </small><span style="color: #8f98a0;">2023. nov. 14</span></p>
-                    <p class="card-text sorok  "><small class="text-uppercase">Fejlesztő: </small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
-                    <p class="card-text sorok  "><small class="text-uppercase">Kiadó: </small>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://suli.jedlik.eu/">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
+                    <p class="card-text">Szerezd meg a szabaduláshoz szükséges itemeket és szabadulj ki a börtönből!</p>
+                    <p class="card-text sorok text-uppercase mb-0">
+                        <span>Legutóbbi értékelések: 
+                        <span class="text-capitalize">
+                        <a href="#">Pozitív</a></span> (137) </span></p>
+
+                    <p class="card-text sorok text-uppercase ">
+                        <span>Minden értékelés: 
+                        <span class="text-capitalize">
+                        <a href="#">Nagyon pozitív</a></span> (4,351) </span></p>
+
+                    <p class="card-text sorok  ">
+                        <span class="text-uppercase">Megjelenési dátuma: </span>
+                        <span class="kisszoveg">2023. nov. 15</span></p>
+
+                    <p class="card-text sorok  ">
+                        <span class="text-uppercase">Fejlesztő: </span> 
+                        <a href="#">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
+
+                    <p class="card-text sorok  ">
+                        <span class="text-uppercase">Kiadó: </span> 
+                        <a href="#">Farkas Ádám, Horváth Dániel, Horváth Márk</a></p>
+
                     <a class="gomb" href="pythonprojekt.zip">Letöltés (1.10 verzió)</a>
                 </div>
             </div>
