--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-8 justify-content-center mb-3">
-            <div id="carouselExample" class="carousel slide">
+            <div class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="images/kep2.png" class="kep2 d-block w-100" alt="...">
@@ -58,7 +58,7 @@
               </div>
         </div>
         <div class="col-lg-4 lg-m-5 justify-content-center">
-            <div class="kártya cardframe" style="width: 110%;">
+            <div class="kártya cardframe" style="width: 100%;">
                 <img src="images/szoba2.jpg" class="card-img-top" alt="...">
                 <div class="card-body ">
                     <p class="card-text">Szerezd meg a szabaduláshoz szükséges itemeket és szabadulj ki a börtönből!</p>
